# mixed-tags-serde

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  visitor.rs
tagged_visitor/: Cargo.toml
tagged_visitor/src/: lib.rs
tests/: smoke.rs
