[package]
name = "mixed-tags-serde-impl"
version = "0.1.0"
authors = ["Waffle <wafflelapkin@gmail.com>", "Andrey Vlasov <andrassy_anderson@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0" }
syn = { version = "1.0", features = ["full"] }
